# son-dialect

./: CMakeLists.txt  README.md
include/SoN/IR/: LowerToSoN.h  SoNDialect.h  SoNDialect.td
lib/: CMakeLists.txt
lib/SoN/: CMakeLists.txt  LowerToSoN.cpp  SoNDialect.cpp  SoNOps.td
test/: test_add.cpp  test_lower.cpp
